sonarqube simplifications on tests